--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,4 +5,17 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  min-width: 1366px;
 }
+.el-breadcrumb{
+  margin-bottom: 15px;
+  font-size: 12px;
+}
+.el-table {
+  margin-top: 15px;
+  font-size: 12px;
+}
+.el-tag{
+  margin: 7px;
+}
+
