完成了商品添加操作

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -18,4 +18,17 @@ body,
 .el-tag{
   margin: 7px;
 }
+.el-steps{
+  margin: 15px 0;
+}
+.el-step{
+  font-size: 13px;
+}
+
+.ql-editor{
+  min-height: 300px;
+}
+.btnAdd{
+  margin-top: 15px !important;
+}
 
